<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.airlift</groupId>
        <artifactId>airbase</artifactId>
        <version>157</version>
    </parent>

    <groupId>step.aero</groupId>
    <artifactId>pulumi-trino</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <air.check.skip-spotbugs>true</air.check.skip-spotbugs>
        <air.check.skip-pmd>true</air.check.skip-pmd>
        <air.java.version>21.0.1</air.java.version>
        <air.main.basedir>${project.parent.basedir}</air.main.basedir>
        <project.build.targetJdk>21</project.build.targetJdk>
        <air.maven.version>3.9.3</air.maven.version>
        <mainClass>step.aero.PulumiProvisioning</mainClass>
        <maven.compiler.release>21</maven.compiler.release>
        <pulumi.version>3.112.0</pulumi.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>com.pulumi</groupId>
            <artifactId>aws</artifactId>
            <version>6.40.0</version>
        </dependency>
        <dependency>
            <groupId>com.pulumi</groupId>
            <artifactId>awsx</artifactId>
            <version>2.12.1</version>
        </dependency>
        <dependency>
            <groupId>com.pulumi</groupId>
            <artifactId>eks</artifactId>
            <version>2.7.0</version>
        </dependency>
        <dependency>
            <groupId>com.pulumi</groupId>
            <artifactId>kubernetes</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.pulumi</groupId>
            <artifactId>pulumi</artifactId>
            <version>0.12.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.api.grpc</groupId>
                    <artifactId>proto-google-common-protos</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <mainClass>step.aero.PulumiProvisioning</mainClass>
                        <commandlineArgs>--enable-preview</commandlineArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>